--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -10,7 +10,9 @@
     "sourceMap": true,
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true
   },
 
   "include": ["src/**/*"],
