--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@rollup/plugin-html": "^2.0.0",
     "bootstrap": "^5.3.3",
     "brace": "^0.11.1",
     "sirv-cli": "^2.0.0",
